# rust_todo_app_slint

./: Cargo.toml  LICENSE  README.md
src/: functionslib.rs  lib.rs  library.rs  main.rs  serializable_item.rs  todo_item.rs
ui/: appwindow.slint
