[package]
name = "to-do"
version = "1.0.0"
authors = ["royal-tier"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.4"
serde = {version= "1.0.197", features=["derive"]}
bincode = "1.3.3"

[lib]
name = "lib"
path = "src/lib.rs"

[build-dependencies]
slint-build = "1.4"